    Specifically:
      org.gjt.sp.jedit.syntax.DisplayTokenHandler
        MAX_CHUNK_LEN
        initChunk()  (* this was protected)
      org.gjt.sp.jedit.syntax.Chunk
        accessable
        initialized
        style
        width
        Chunk constructors
        offsetToX() (non static)
        xToOffset() (non static)
        init()
  (Kazutoshi Satoda)

}}}
{{{ Editing

- logs edit mode added (Matthieu Casanova)

- Dart mode added (Patch #3483431 - Chris Sullins)

- Haskell mode:
  - Removed the fixed 8 character indent and tab size, #3470636.
  - Added some GHC extensions: recursive do and arrow notation -
    patch #3470637 by Stephen Blackheath

- New mxml.xml mode, and updates to ActionScript (#2913561 - Chris Hill)

- New metapost.xml mode (#1606258 - Kondr)

- Updated cobol.xml (#2654343 - Markus Röhner)

- fortran90.xml: new Fortran90 edit mode (#2406563 - Jonni Lehtiranta)

- roff.xml: New ROFF/GROFF/TROFF edit mode 
  (#3081484 - Kostas Michalopoulos, Robert Schwenn)

- nsis2.xml: Added Java/C style comments. (#2976473) 

- Ruby Edit Mode: Improved Symbol Highlighting 
   (#1918110 - Ingo Tomahogh, Alan Ezust)

- "velocity_pure.xml" edit mode to replace older sgml-based velocity.xml.
   Velocity keywords nested within markup tags incorrectly highlighted.
   (#1285741 - Robert Schwenn)

- Updated D edit mode (#3463009 - Olivier Pisano)

- Removed special highlight for object access and creation in php edit mode
  (#2985508, #3151072) (Matthieu Casanova)

- Major simplification of phpdoc to make it look more like javadoc
  (#1803310, #3029383, #3316733) (Matthieu Casanova)

- Added some missing keywords to vrml2 edit mode (patch #3471586) (Jimmy Chaw)

- Using no highlight or limited syntax highlight in large buffers now also
  disables soft wrap (Matthieu Casanova)

- Using no highlight or limited syntax highlight in large buffers now disables
  highlight of very long lines (Matthieu Casanova)

- Latex Indentation a nuisance (#3432974)
